management of some models due to vercell limit

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^8.0.7",
+    "react-sweetalert2": "^0.6.0",
     "replicate": "^0.14.1",
     "stripe": "^12.17.0",
     "tailwind-merge": "^1.14.0",
